// im_logic/v1/group.proto
// 定义 im-logic 服务的群组管理相关接口

syntax = "proto3";

package im.logic.v1;

option go_package = "github.com/ceyewan/gochat/api/proto/im_logic/v1;logicv1";

import "im_logic/v1/common.proto";

// GroupService 群组管理服务
// 提供群组创建、加入、退出、成员管理等功能
service GroupService {
  // CreateGroup 创建群组
  // 创建新的群组并设置创建者为群主
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse);
  
  // GetGroup 获取群组信息
  // 返回群组的详细信息
  rpc GetGroup(GetGroupRequest) returns (GetGroupResponse);
  
  // JoinGroup 加入群组
  // 用户申请加入指定群组
  rpc JoinGroup(JoinGroupRequest) returns (JoinGroupResponse);
  
  // LeaveGroup 离开群组
  // 用户主动离开群组
  rpc LeaveGroup(LeaveGroupRequest) returns (LeaveGroupResponse);
  
  // GetGroupMembers 获取群组成员列表
  // 返回群组的所有成员信息
  rpc GetGroupMembers(GetGroupMembersRequest) returns (GetGroupMembersResponse);
  
  // UpdateGroup 更新群组信息
  // 更新群组名称、头像等信息（需要管理员权限）
  rpc UpdateGroup(UpdateGroupRequest) returns (UpdateGroupResponse);
  
  // SetMemberRole 设置成员角色
  // 设置群组成员的角色（需要群主权限）
  rpc SetMemberRole(SetMemberRoleRequest) returns (SetMemberRoleResponse);
  
  // RemoveMember 移除成员
  // 从群组中移除指定成员（需要管理员权限）
  rpc RemoveMember(RemoveMemberRequest) returns (RemoveMemberResponse);
}

// CreateGroupRequest 创建群组请求
message CreateGroupRequest {
  // 创建者用户 ID
  string creator_id = 1;
  // 群组名称
  string name = 2;
  // 群组头像 URL（可选）
  string avatar_url = 3;
  // 群组描述（可选）
  string description = 4;
  // 初始成员 ID 列表（可选）
  repeated string member_ids = 5;
}

// CreateGroupResponse 创建群组响应
message CreateGroupResponse {
  // 群组信息
  Group group = 1;
}

// GetGroupRequest 获取群组信息请求
message GetGroupRequest {
  // 用户 ID
  string user_id = 1;
  // 群组 ID
  string group_id = 2;
}

// GetGroupResponse 获取群组信息响应
message GetGroupResponse {
  // 群组信息
  Group group = 1;
  // 用户在群组中的角色
  GroupMemberRole user_role = 2;
}

// JoinGroupRequest 加入群组请求
message JoinGroupRequest {
  // 用户 ID
  string user_id = 1;
  // 群组 ID
  string group_id = 2;
  // 加入理由（可选）
  string reason = 3;
}

// JoinGroupResponse 加入群组响应
message JoinGroupResponse {
  // 操作是否成功
  bool success = 1;
  // 群组信息
  Group group = 2;
}

// LeaveGroupRequest 离开群组请求
message LeaveGroupRequest {
  // 用户 ID
  string user_id = 1;
  // 群组 ID
  string group_id = 2;
}

// LeaveGroupResponse 离开群组响应
message LeaveGroupResponse {
  // 操作是否成功
  bool success = 1;
}

// GetGroupMembersRequest 获取群组成员请求
message GetGroupMembersRequest {
  // 请求者用户 ID
  string user_id = 1;
  // 群组 ID
  string group_id = 2;
  // 页码（从 1 开始）
  int32 page = 3;
  // 每页大小
  int32 page_size = 4;
  // 角色过滤（可选）
  GroupMemberRole role_filter = 5;
}

// GetGroupMembersResponse 获取群组成员响应
message GetGroupMembersResponse {
  // 成员列表
  repeated GroupMember members = 1;
  // 总数量
  int64 total = 2;
  // 当前页码
  int32 page = 3;
  // 每页大小
  int32 page_size = 4;
}

// UpdateGroupRequest 更新群组信息请求
message UpdateGroupRequest {
  // 操作者用户 ID
  string user_id = 1;
  // 群组 ID
  string group_id = 2;
  // 新的群组名称（可选）
  string name = 3;
  // 新的群组头像 URL（可选）
  string avatar_url = 4;
  // 新的群组描述（可选）
  string description = 5;
}

// UpdateGroupResponse 更新群组信息响应
message UpdateGroupResponse {
  // 操作是否成功
  bool success = 1;
  // 更新后的群组信息
  Group group = 2;
}

// SetMemberRoleRequest 设置成员角色请求
message SetMemberRoleRequest {
  // 操作者用户 ID
  string operator_id = 1;
  // 群组 ID
  string group_id = 2;
  // 目标用户 ID
  string target_user_id = 3;
  // 新角色
  GroupMemberRole new_role = 4;
}

// SetMemberRoleResponse 设置成员角色响应
message SetMemberRoleResponse {
  // 操作是否成功
  bool success = 1;
}

// RemoveMemberRequest 移除成员请求
message RemoveMemberRequest {
  // 操作者用户 ID
  string operator_id = 1;
  // 群组 ID
  string group_id = 2;
  // 目标用户 ID
  string target_user_id = 3;
  // 移除理由（可选）
  string reason = 4;
}

// RemoveMemberResponse 移除成员响应
message RemoveMemberResponse {
  // 操作是否成功
  bool success = 1;
}

// Group 群组信息
message Group {
  // 群组 ID
  string id = 1;
  // 群组名称
  string name = 2;
  // 群组头像 URL
  string avatar_url = 3;
  // 群组描述
  string description = 4;
  // 群主 ID
  string owner_id = 5;
  // 成员数量
  int32 member_count = 6;
  // 创建时间（Unix 时间戳）
  int64 created_at = 7;
  // 更新时间（Unix 时间戳）
  int64 updated_at = 8;
}

// GroupMember 群组成员信息
message GroupMember {
  // 用户 ID
  string user_id = 1;
  // 群组 ID
  string group_id = 2;
  // 成员角色
  GroupMemberRole role = 3;
  // 加入时间（Unix 时间戳）
  int64 joined_at = 4;
  // 用户信息
  User user = 5;
}

// GroupMemberRole 群组成员角色
enum GroupMemberRole {
  // 未指定角色
  GROUP_MEMBER_ROLE_UNSPECIFIED = 0;
  // 普通成员
  GROUP_MEMBER_ROLE_MEMBER = 1;
  // 管理员
  GROUP_MEMBER_ROLE_ADMIN = 2;
  // 群主
  GROUP_MEMBER_ROLE_OWNER = 3;
}