// im_repo/v1/group.proto
// 定义 im-repo 服务的群组数据相关接口

syntax = "proto3";

package im.repo.v1;

import "im_repo/v1/online_status.proto";

option go_package = "github.com/ceyewan/gochat/api/proto/im_repo/v1;repov1";

// GroupService 群组数据服务
// 提供群组数据的 CRUD 操作和缓存管理
service GroupService {
  // CreateGroup 创建群组
  // 在数据库中创建新群组记录
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse);
  
  // GetGroup 获取群组信息
  // 优先从缓存获取，缓存未命中时从数据库查询
  rpc GetGroup(GetGroupRequest) returns (GetGroupResponse);
  
  // UpdateGroup 更新群组信息
  // 更新数据库并删除对应缓存
  rpc UpdateGroup(UpdateGroupRequest) returns (UpdateGroupResponse);
  
  // AddGroupMember 添加群组成员
  // 添加成员并更新成员数量
  rpc AddGroupMember(AddGroupMemberRequest) returns (AddGroupMemberResponse);
  
  // RemoveGroupMember 移除群组成员
  // 移除成员并更新成员数量
  rpc RemoveGroupMember(RemoveGroupMemberRequest) returns (RemoveGroupMemberResponse);
  
  // GetGroupMembers 获取群组成员列表
  // 支持分页查询群组成员
  rpc GetGroupMembers(GetGroupMembersRequest) returns (GetGroupMembersResponse);
  
  // GetMembersOnlineStatus 批量获取群组成员在线状态
  // 批量查询成员的在线状态，优化网络调用
  rpc GetMembersOnlineStatus(GetMembersOnlineStatusRequest) returns (GetMembersOnlineStatusResponse);
  
  // UpdateMemberRole 更新成员角色
  // 更新群组成员的角色
  rpc UpdateMemberRole(UpdateMemberRoleRequest) returns (UpdateMemberRoleResponse);
}

// CreateGroupRequest 创建群组请求
message CreateGroupRequest {
  // 群组 ID
  string group_id = 1;
  // 群组名称
  string name = 2;
  // 群主 ID
  string owner_id = 3;
  // 群组头像 URL
  string avatar_url = 4;
  // 群组描述
  string description = 5;
}

// CreateGroupResponse 创建群组响应
message CreateGroupResponse {
  // 群组信息
  Group group = 1;
}

// GetGroupRequest 获取群组请求
message GetGroupRequest {
  // 群组 ID
  string group_id = 1;
}

// GetGroupResponse 获取群组响应
message GetGroupResponse {
  // 群组信息
  Group group = 1;
  // 是否从缓存获取
  bool from_cache = 2;
}

// UpdateGroupRequest 更新群组请求
message UpdateGroupRequest {
  // 群组 ID
  string group_id = 1;
  // 新群组名称（可选）
  string name = 2;
  // 新群组头像 URL（可选）
  string avatar_url = 3;
  // 新群组描述（可选）
  string description = 4;
  // 更新字段掩码
  repeated string update_mask = 5;
}

// UpdateGroupResponse 更新群组响应
message UpdateGroupResponse {
  // 更新后的群组信息
  Group group = 1;
}

// AddGroupMemberRequest 添加群组成员请求
message AddGroupMemberRequest {
  // 群组 ID
  string group_id = 1;
  // 用户 ID
  string user_id = 2;
  // 成员角色
  int32 role = 3;
}

// AddGroupMemberResponse 添加群组成员响应
message AddGroupMemberResponse {
  // 群组成员信息
  GroupMember member = 1;
}

// RemoveGroupMemberRequest 移除群组成员请求
message RemoveGroupMemberRequest {
  // 群组 ID
  string group_id = 1;
  // 用户 ID
  string user_id = 2;
}

// RemoveGroupMemberResponse 移除群组成员响应
message RemoveGroupMemberResponse {
  // 操作是否成功
  bool success = 1;
}

// GetGroupMembersRequest 获取群组成员请求
message GetGroupMembersRequest {
  // 群组 ID
  string group_id = 1;
  // 偏移量
  int32 offset = 2;
  // 限制数量
  int32 limit = 3;
  // 角色过滤（可选）
  int32 role_filter = 4;
}

// GetGroupMembersResponse 获取群组成员响应
message GetGroupMembersResponse {
  // 成员列表
  repeated GroupMember members = 1;
  // 总数量
  int64 total = 2;
  // 是否还有更多
  bool has_more = 3;
}

// GetMembersOnlineStatusRequest 批量获取成员在线状态请求
message GetMembersOnlineStatusRequest {
  // 用户 ID 列表
  repeated string user_ids = 1;
}

// GetMembersOnlineStatusResponse 批量获取成员在线状态响应
message GetMembersOnlineStatusResponse {
  // 在线状态列表
  repeated OnlineStatus statuses = 1;
}

// UpdateMemberRoleRequest 更新成员角色请求
message UpdateMemberRoleRequest {
  // 群组 ID
  string group_id = 1;
  // 用户 ID
  string user_id = 2;
  // 新角色
  int32 new_role = 3;
}

// UpdateMemberRoleResponse 更新成员角色响应
message UpdateMemberRoleResponse {
  // 操作是否成功
  bool success = 1;
}

// Group 群组信息
message Group {
  // 群组 ID
  string id = 1;
  // 群组名称
  string name = 2;
  // 群主 ID
  string owner_id = 3;
  // 成员数量
  int32 member_count = 4;
  // 群组头像 URL
  string avatar_url = 5;
  // 群组描述
  string description = 6;
  // 创建时间（Unix 时间戳）
  int64 created_at = 7;
  // 更新时间（Unix 时间戳）
  int64 updated_at = 8;
}

// GroupMember 群组成员信息
message GroupMember {
  // 群组 ID
  string group_id = 1;
  // 用户 ID
  string user_id = 2;
  // 成员角色
  int32 role = 3;
  // 加入时间（Unix 时间戳）
  int64 joined_at = 4;
}

